@@ -16,13 +16,13 @@ For Maven project `pom.xml`
 <dependency>
     <groupId>dev.langchain4j</groupId>
     <artifactId>langchain4j</artifactId>
-    <version>1.7.1</version>
+    <version>1.9.1</version>
 </dependency>
 
 <dependency>
     <groupId>dev.langchain4j</groupId>
     <artifactId>langchain4j-jlama</artifactId>
-    <version>1.7.1-beta14</version>
+    <version>1.9.1-beta17</version>
 </dependency>
 
 <dependency>
@@ -39,9 +39,16 @@ For Maven project `pom.xml`
 For Gradle project `build.gradle`
 
 ```groovy
-implementation 'dev.langchain4j:langchain4j:1.7.1'
-implementation 'dev.langchain4j:langchain4j-jlama:1.7.1-beta14'
+implementation 'dev.langchain4j:langchain4j:1.9.1'
+implementation 'dev.langchain4j:langchain4j-jlama:1.9.1-beta17'
 ```
+
+Jlama uses Java 21 preview features. You can enable the features globally with:
+
+`export JDK_JAVA_OPTIONS="--add-modules jdk.incubator.vector --enable-preview"`
+
+or enable the preview features by configuring maven compiler and failsafe plugins.
+
 
 ### Model Selection
 You can use most safetensor models on [HuggingFace](https://huggingface.co/models?library=safetensors&sort=trending) and specify them using the `owner/model-name` format.
